--- a/Postit/appsettings.json
+++ b/Postit/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostitConnectionString": "Server=localhost;Port=5432;Database=dbPostit;User Id=postgres;Password=12345;"
+  }
 }
